# course_work

./: .gitignore  ANALYSIS_SUMMARY.md  BOOKMAKERS_odds_patterns.md  CHEATSHEET_bayes_sports_matches.md  Untitled.ipynb  Untitled1.ipynb  bayes_task3.ipynb  bookmaker_baseline_comparison.ipynb  calibration_analysis.ipynb  error_analysis_and_weight_stability.ipynb  gnb_vs_lr_analysis.ipynb  hidden_strength_features.ipynb  ods.parquet  players.parquet  prepare_data.ipynb  pyproject.toml  report_intermediate_bayes_sports_matches.md  surface_stratification_analysis.ipynb  task1.txt  task2.txt  task3.txt  tml.parquet  walk_forward_validation.ipynb  weather_cache.sqlite
.ipynb_checkpoints/: bayes_task3-checkpoint.ipynb  bookmaker_baseline_comparison-checkpoint.ipynb  calibration_analysis-checkpoint.ipynb  error_analysis_and_weight_stability-checkpoint.ipynb  gnb_vs_lr_analysis-checkpoint.ipynb  hidden_strength_features-checkpoint.ipynb  prepare_data-checkpoint.ipynb  report_intermediate_bayes_sports_matches-checkpoint.md  surface_stratification_analysis-checkpoint.ipynb  walk_forward_validation-checkpoint.ipynb
odds/: 2026.xlsx  Untitled.ipynb
odds/.ipynb_checkpoints/: get_bets,py-checkpoint
