[project]
name = "atp-tml-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.7.2",
]
